--- a/EmergencyRoadsideAssistance/Dockerfile
+++ b/EmergencyRoadsideAssistance/Dockerfile
@@ -5,21 +5,21 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["EmergencyRoadsideAssistance/EmergencyRoadsideAssistance.csproj", "EmergencyRoadsideAssistance/"]
-RUN dotnet restore "EmergencyRoadsideAssistance/EmergencyRoadsideAssistance.csproj"
+COPY ["EmergencyRoadsideAssistance.csproj", "./"]
+RUN dotnet restore "EmergencyRoadsideAssistance.csproj"
 COPY . .
-WORKDIR "/src/EmergencyRoadsideAssistance"
+WORKDIR "/src/"
 RUN dotnet build "EmergencyRoadsideAssistance.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "EmergencyRoadsideAssistance.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
+EXPOSE 80
+EXPOSE 443
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "EmergencyRoadsideAssistance.dll"]
