--- a/EmergencyRoadsideAssistance/Properties/launchSettings.json
+++ b/EmergencyRoadsideAssistance/Properties/launchSettings.json
@@ -23,7 +23,9 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "httpPort": 54080,
+      "sslPort": 54443
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
